# obsidian-graph-analyser

./: Cargo.toml  README.md  graph.json  graph_parser.py
src/: app.rs  filtering.rs  lib.rs  main.rs  vault_parser.rs
src/page_search/: search_criteria.pest
test_vault/: Matrix.md  System of linear equations.md  Vector.md
test_vault/bruh/: Linear algebra.md
