[package]
name = "obsidian_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
petgraph = "0.6.3"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
